@@ -3,6 +3,8 @@
 
 Version 8.0.32
 
+  - Fix for Bug#34725725, RPM and DEB builds broken after introducing javadoc for maven bundles.
+
   - Fix for Bug#108814 (Bug#34717205), Contribution: Fix name of relocation POM file.
     Thanks to Henning Pöttker for his contribution.
 
